--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Renderlist</title>
   </head>
   <body>
-    <div id="app" />
-    <script src="public/bundle.js" type="text/javascript"></script>
+    <div id="container" />
+    <script src="bundle.js" type="text/javascript"></script>
   </body>
 </html>
