--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Renderlist</title>
+	<link rel="stylesheet" type="text/css"  href="base.css"/>
   </head>
   <body>
     <div id="container" />
