--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>Renderlist</title>
 	<link rel="stylesheet" type="text/css"  href="base.css"/>
+	<link rel="stylesheet" href="bundle.css">
   </head>
   <body>
     <div id="container" />
