--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Renderlist</title>
 	<link rel="stylesheet" type="text/css"  href="base.css"/>
 	<link rel="stylesheet" href="bundle.css">
+	<link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
   </head>
   <body>
     <div id="container" />
