--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Renderlist</title>
+    <title>RenderList</title>
 	<link rel="stylesheet" type="text/css"  href="base.css"/>
 	<link rel="stylesheet" href="bundle.css">
 	<link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
