--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>RenderList</title>
+	<meta name="HandheldFriendly" content="true">
+	<meta name="description" content="Listing the showreels of artists and studios from around the world">
+	<meta property="og:title" content="RenderList - Best showreels from around the world">
+	<meta property="og:url" content="http://www.renderlist.com/">
+	<meta property="og:description" content="Listing the showreels of artists and studios from around the world">
+	<meta name="keywords" content="renderlist, renderlist.com, showreel, animation, demoreel">
+    <title>RenderList - Best showreels from around the world</title>
 	<link rel="stylesheet" type="text/css"  href="base.css"/>
 	<link rel="stylesheet" href="bundle.css">
 	<link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
