--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta property="og:title" content="RenderList - Best showreels from around the world">
 	<meta property="og:url" content="http://www.renderlist.com/">
 	<meta property="og:description" content="Listing the showreels of artists and studios from around the world">
+	<meta property="og:image" content="http://www.renderlist.com/assets/tab.png"/>
 	<meta name="keywords" content="renderlist, renderlist.com, showreel, animation, demoreel">
 	<meta name="google-site-verification" content="NWhM542dK0yxIDd30FLQwhl_2_9JACBGfFbdTa-5vfU" />
     <title>RenderList - Best showreels from around the world</title>
